--- a/index.html
+++ b/index.html
@@ -98,10 +98,9 @@
 				<p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong>: dalle 19:00 alle 23:00</p>
 			</div> -->
 			<div class="medium-6 large-6 columns">
-				<h2>Asporto e Consegne</h2>
-				<!-- <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>22:00</strong></p>
-				<p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p> -->
-				<h4><strong>Tutti i giorni</strong>: dalle 19:00 alle 21:00. <br>Chiusi il Lunedì.</h4>
+				<h2>Consegne a Domicilio</h2>
+				<p>Dal <strong>Venerdì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>21:00</strong></p>
+				<!-- <p>Il servizio di consegna a domicilio riprenderà dal 15 Ottobre</p> -->
 				<!-- <p><strong>Giovedì</strong>, <strong>Venerdì</strong>, <strong>Domenica</strong>: dalle 19:00 alle 22:00</p> -->
 				<!-- <p><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></p> -->
 			</div>
@@ -217,11 +216,11 @@
 						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p>
 					</li>
 					<li>
-                        <h4 class="subheader">Asporto e Consegna a Domicilio</h4>
+                        <h4 class="subheader">Consegna a Domicilio</h4>
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
-                                <p>Dal Martedì alla Domenica <br>Dalle 19:00 alle 21:00</p>
+                                <p>Dal Venerdì alla Domenica <br>Dalle 19:00 alle 21:00</p>
                             </div>
                         </div>
                     </li>
