--- a/asporto/index.html
+++ b/asporto/index.html
@@ -87,13 +87,13 @@
         </div> -->
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <h1>Asporto e Consegne a Domicilio</h1>
+                <h1>Consegne a Domicilio</h1>
                 <hr>
             </div>
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <p><strong>Venerd'</strong>, <strong>Sabato</strong> e <strong>Domenica</strong>: dalle 19:00 alle 21:00</p>
+                <p><strong>Venerdì</strong>, <strong>Sabato</strong> e <strong>Domenica</strong>: dalle 19:00 alle 21:00</p>
                 <!-- <h4><strong>Sabato</strong>: dalle 19:00 alle 20:00</strong></h4> -->
                 <!-- <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button extra-space-aside-tab-immagini"><i class="fa fa-phone"></i> 071 8853384</a></span> -->
             </div>
