--- a/menu/index.html
+++ b/menu/index.html
@@ -82,7 +82,7 @@
             <h1>Menù</h1>
             <hr>
             <!-- <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p> -->
-            <p>Momentaneamente effettuiamo solo Asporti e Consegne a Domicilio</p>
+            <p>Momentaneamente effettuiamo solo Consegne a Domicilio</p>
         </div>
     </div>
         <div class="row">
