--- a/menu/index.html
+++ b/menu/index.html
@@ -82,7 +82,7 @@
             <h1>Menù</h1>
             <hr>
             <!-- <p>Dal <strong>Giovedì</strong> alla <strong>Domenica</strong><br>Dalle <strong>19:00</strong> alle <strong>23:00</strong></p> -->
-            <p>Momentaneamente effettuiamo solo Consegne a Domicilio</p>
+            <p>Momentaneamente effettuiamo solo Asporti e Consegne a Domicilio</p>
         </div>
     </div>
         <div class="row">
@@ -494,7 +494,7 @@
 						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p>
 					</li>
 		  			<li>
-                        <h4 class="subheader">Consegna a Domicilio</h4>
+                        <h4 class="subheader">Asporti e Consegna a Domicilio</h4>
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
