--- a/asporto/index.html
+++ b/asporto/index.html
@@ -87,7 +87,7 @@
         </div> -->
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <h1>Consegne a Domicilio</h1>
+                <h1>Asporti e Consegne a Domicilio</h1>
                 <hr>
             </div>
         </div>
@@ -320,7 +320,7 @@
 						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p>
 					</li>
 		  			<li>
-                        <h4 class="subheader">Consegna a Domicilio</h4>
+                        <h4 class="subheader">Asporti e Consegna a Domicilio</h4>
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
