--- a/eventi/index.html
+++ b/eventi/index.html
@@ -339,7 +339,7 @@
 						<p><a href="https://m.me/cavecchiabeerstrot"><i class="fab fa-facebook-messenger"></i>Prenota Online</a></p>
 					</li>
 		  			<li>
-                        <h4 class="subheader">Consegna a Domicilio</h4>
+                        <h4 class="subheader">Asporti e Consegna a Domicilio</h4>
                         <meta itemprop="openingHours" content="Th, Fr, Sa, Su 19:00-23:00">
                         <div class="row">
                             <div class="large-12 medium-12 small-12 columns">
