--- a/asporto/index.html
+++ b/asporto/index.html
@@ -87,7 +87,7 @@
         </div> -->
         <div class="row">
             <div class="medium-12 large-12 columns">
-                <h1>Asporti e Consegne a Domicilio</h1>
+                <h1>Asporto e Consegne a Domicilio</h1>
                 <hr>
             </div>
         </div>
