--- a/menu/index1.html
+++ b/menu/index1.html
@@ -79,54 +79,9 @@
 <!-- cena -->
         <section class="content active" role="tabpanel" aria-hidden="false" id="cena">
 
-            <ul class="small-block-grid-1">
-  <li>
-    <ul class="accordion" data-accordion="myAccordionGroup">
-      <li class="accordion-navigation">
-        <a href="#panel1c">Accordion 1</a>
-        <div id="panel1c" class="content">
-          Panel 1. Lorem ipsum dolor
-        </div>
-      </li>
-      <li class="accordion-navigation">
-        <a href="#panel2c">Accordion 2</a>
-        <div id="panel2c" class="content">
-          Panel 2. Lorem ipsum dolor
-        </div>
-      </li>
-      <li class="accordion-navigation">
-        <a href="#panel3c">Accordion 3</a>
-        <div id="panel3c" class="content">
-          Panel 3. Lorem ipsum dolor
-        </div>
-      </li>
-    </ul>
-  </li>
-  <li>
-    <ul class="accordion" data-accordion="myAccordionGroup">
-      <li class="accordion-navigation">
-        <a href="#panel4c">Accordion 4</a>
-        <div id="panel4c" class="content">
-          Panel 4. Lorem ipsum dolor
-        </div>
-      </li>
-      <li class="accordion-navigation">
-        <a href="#panel5c">Accordion 5</a>
-        <div id="panel5c" class="content">
-          Panel 5. Lorem ipsum dolor
-        </div>
-      </li>
-      <li class="accordion-navigation">
-        <a href="#panel6c">Accordion 6</a>
-        <div id="panel6c" class="content">
-          Panel 6. Lorem ipsum dolor
-        </div>
-      </li>
-    </ul>
-  </li>
-</ul>
 
-</section>
+
+
 
 
 
@@ -135,8 +90,11 @@
 
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Per Stuzzicare</h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                    <ul class="accordion" data-accordion>
+  <li class="accordion-navigation">
+    <a href="#panel1a">PER STUZZICARE</a>
+    <div id="panel1a" class="content active">
+      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
                             <h3>Tris di Mini Pulled Pork &emsp; 6,5</h3>
                             <p>Hamburger mignon di maiale sfilacciato in tre salse: piccante, senape, bbq</p>
@@ -170,12 +128,12 @@
                             <p>Patate fritte con buccia</p>
                         </li>
                     </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Per i Più Piccoli</h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+    </div>
+  </li>
+  <li class="accordion-navigation">
+    <a href="#panel2a" class="subheader">Per i Più Piccoli</a>
+    <div id="panel2a" class="content">
+      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
                         <li>
                             <h3>Mini Burger e Patatine &emsp; 6,5</h3>
                             <p>Manzo (100 grammi), cheddar, servito con patate fritte</p>
@@ -185,8 +143,35 @@
                             <p>Bocconcini di pollo fatti in casa, serviti con patate fritte</p>
                         </li>
                     </ul>
+    </div>
+  </li>
+  <li class="accordion-navigation">
+    <a href="#panel3a" class="subheader">Hamburger Classici (180 grammi)<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media.</a>
+    <div id="panel3a" class="content">
+      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+                        <li>
+                            <h3>Beerstrot &emsp; 10,9 / doppio 14,9</h3>
+                            <p>Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit</p>
+                        </li>
+                        <li>
+                            <h3>New York &emsp; 8,9 / doppio 14,9</h3>
+                            <p>Manzo, cheddar, cipolla caramellata, insalata</p>
+                        </li>
+                        <li>
+                            <h3>Diablo &emsp; 10,5 / doppio 14,9</h3>
+                            <p>Manzo, cheddar, bacon croccante, rucola, salsa piccante</p>
+                        </li>
+                        <li>
+                            <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
+                            <p>Pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
+                        </li>
+                    </ul>
+    </div>
+  </li>
+</ul>
                 </div>
             </div>
+
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Hamburger Classici (180 grammi)<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media.</small></h2>
