--- a/menu/index1.html
+++ b/menu/index1.html
@@ -94,46 +94,46 @@
   <li class="accordion-navigation">
     <a href="#panel1a">PER STUZZICARE</a>
     <div id="panel1a" class="content active">
-      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
-                        <li>
-                            <h3>Tris di Mini Pulled Pork &emsp; 6,5</h3>
-                            <p>Hamburger mignon di maiale sfilacciato in tre salse: piccante, senape, bbq</p>
-                        </li>
-                        <li>
-                            <h3>Bocconcini di Pollo &emsp; 5,5</h3>
-                            <p>Serviti con salsa piccante</p>
-                        </li>
-                        <li>
-                            <h3>Peperoncini Piccanti &emsp; 5</h3>
-                            <p>Peperoncini ripieni di robiola avvolti nella pancetta</p>
-                        </li>
-                        <li>
-                            <h3>Olive all'Ascolana &emsp; 5</h3>
-                            <p>Il più tipico street food marchigiano</p>
-                        </li>
-                        <li>
-                            <h3>Mozzarelle Fritte &emsp; 5,5</h3>
-                            <p>Servite con salsa aioli fatta in casa</p>
-                        </li>
-                        <li>
-                            <h3>Cipolle Rosse &emsp; 4,5</h3>
-                            <p>Cipolla rossa in tempura</p>
-                        </li>
-                        <li>
-                            <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
-                            <p>Servite con salsa alla senape fatta in casa</p>
-                        </li>
-                        <li>
-                            <h3>Patate Fritte &emsp; 4</h3>
-                            <p>Patate fritte con buccia</p>
-                        </li>
-                    </ul>
+      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
+        <li>
+            <h3>Tris di Mini Pulled Pork &emsp; 6,5</h3>
+            <p>Hamburger mignon di maiale sfilacciato in tre salse: piccante, senape, bbq</p>
+        </li>
+        <li>
+            <h3>Bocconcini di Pollo &emsp; 5,5</h3>
+            <p>Serviti con salsa piccante</p>
+        </li>
+        <li>
+            <h3>Peperoncini Piccanti &emsp; 5</h3>
+            <p>Peperoncini ripieni di robiola avvolti nella pancetta</p>
+        </li>
+        <li>
+            <h3>Olive all'Ascolana &emsp; 5</h3>
+            <p>Il più tipico street food marchigiano</p>
+        </li>
+        <li>
+            <h3>Mozzarelle Fritte &emsp; 5,5</h3>
+            <p>Servite con salsa aioli fatta in casa</p>
+        </li>
+        <li>
+            <h3>Cipolle Rosse &emsp; 4,5</h3>
+            <p>Cipolla rossa in tempura</p>
+        </li>
+        <li>
+            <h3>Frittelline di Fagioli e Porri &emsp; 5</h3>
+            <p>Servite con salsa alla senape fatta in casa</p>
+        </li>
+        <li>
+            <h3>Patate Fritte &emsp; 4</h3>
+            <p>Patate fritte con buccia</p>
+        </li>
+    </ul>
     </div>
   </li>
   <li class="accordion-navigation">
     <a href="#panel2a" class="subheader">Per i Più Piccoli</a>
     <div id="panel2a" class="content">
-      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                         <li>
                             <h3>Mini Burger e Patatine &emsp; 6,5</h3>
                             <p>Manzo (100 grammi), cheddar, servito con patate fritte</p>
@@ -146,9 +146,9 @@
     </div>
   </li>
   <li class="accordion-navigation">
-    <a href="#panel3a" class="subheader">Hamburger Classici (180 grammi)<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media.</a>
+    <a href="#panel3a" class="subheader">Hamburger Classici.</a>
     <div id="panel3a" class="content">
-      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                         <li>
                             <h3>Beerstrot &emsp; 10,9 / doppio 14,9</h3>
                             <p>Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit</p>
@@ -168,14 +168,10 @@
                     </ul>
     </div>
   </li>
-</ul>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="large-12 medium-12 small-12 columns">
-                    <h2 class="subheader">Hamburger Classici (180 grammi)<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media.</small></h2>
-                    <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3 title-divider">
+  <li class="accordion-navigation">
+    <a href="#panel4a" class="">Hamburger Classici (180 grammi)<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media.</a>
+    <div id="panel4a" class="content">
+      <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                         <li>
                             <h3>Beerstrot &emsp; 10,9 / doppio 14,9</h3>
                             <p>Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit</p>
@@ -192,9 +188,11 @@
                             <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
                             <p>Pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                         </li>
-                    </ul>
-                </div>
-            </div>
+        </ul>
+    </div>
+  </li>
+
+
             <div class="row">
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Hamburger Stagionali (180 grammi)<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media.</small></h2>
