--- a/menu/index1.html
+++ b/menu/index1.html
@@ -146,7 +146,7 @@
     </div>
   </li>
   <li class="accordion-navigation">
-    <a href="#panel3a" class="subheader">Hamburger Classici.</a>
+    <a href="#panel3a" class="subheader">Hamburger Classici (180 grammi)<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media</small></a>
     <div id="panel3a" class="content">
       <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                         <li>
@@ -172,22 +172,7 @@
     <a href="#panel4a" class="">Hamburger Classici (180 grammi)<br><small>Burger di nostra produzione: contengono solo carne di vacca marchigiana di prima scelta e l'arte della perfetta macinatura. Serviti con patate fritte e a cottura media.</a>
     <div id="panel4a" class="content">
       <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                        <li>
-                            <h3>Beerstrot &emsp; 10,9 / doppio 14,9</h3>
-                            <p>Manzo, cheddar, bacon croccante, cipolla caramellata, insalata, pomodorini confit</p>
-                        </li>
-                        <li>
-                            <h3>New York &emsp; 8,9 / doppio 14,9</h3>
-                            <p>Manzo, cheddar, cipolla caramellata, insalata</p>
-                        </li>
-                        <li>
-                            <h3>Diablo &emsp; 10,5 / doppio 14,9</h3>
-                            <p>Manzo, cheddar, bacon croccante, rucola, salsa piccante</p>
-                        </li>
-                        <li>
-                            <h3>Pollo &emsp; 8,9 / doppio 14,9</h3>
-                            <p>Pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
-                        </li>
+
         </ul>
     </div>
   </li>
