--- a/menu/index1.html
+++ b/menu/index1.html
@@ -255,20 +255,24 @@
                             <p>weisse 5,2%</p>
                         </li>
                         <li>
+                            <h3>MC-77 Mahlzeit</h3>
+                            <p>Altbier rossa 5,5%</p>
+                        </li>
+                        <li>
+                            <h3>MC-77 Sofronia</h3>
+                            <p>Blanche con ibisco 5%</p>
+                        </li>
+                        <li>
                             <h3>Castelli Palmares</h3>
                             <p>rossa stile inglese 5,6%</p>
                         </li>
                          <li>
-                            <h3>Castelli Mirabilia</h3>
-                            <p>american pale ale 6,5%</p>
+                            <h3>MC-77 Ape Regina</h3>
+                            <p>Blonde ale al miele 6,9%</p>
                         </li>
                         <li>
-                            <h3>MC-77 Rockstone</h3>
-                            <p>ipa affumicata 6,4%</p>
-                        </li>
-                        <li>
-                            <h3>Mukkeller Mazzu de Fiuri</h3>
-                            <p>ipa 6,5%</p>
+                            <h3>MC-77 Italian Farmer </h3>
+                            <p>American Pale Ale 5,8%</p>
                         </li>
                     </ul>
                 </div>
@@ -283,41 +287,34 @@
                                 <p>bionda pils 4,9%</p>
                             </li>
                             <li>
-                                <h3>Mukkellerina 50cl &emsp; 6</h3>
-                                <p>Keller con finale secco 4,8%</p>
+                                <h3>Zotler 1447 Naturtrub 50cl &emsp; 6</h3>
+                                <p>marzen tedesca non filtrata 4,9%</p>
                             </li>
                             <li>
-                                <h3>Zotler Oster Bier 50cl &emsp; 6</h3>
-                                <p>marzen tedesca 5,5% </p>
+                                <h3>Hirsch Hellerbock 50cl &emsp; 6</h3>
+                                <p>keller tedesca 6,5%</p>
                             </li>
                             <li>
-                                <h3>Irseer Weisse 50cl &emsp; 6</h3>
+                                <h3>Zotler Weisse 50cl &emsp; 6</h3>
                                 <p>weisse 5,2% </p>
                             </li>
                             <li>
-                                <h3>Irseer Klosterstark 50cl &emsp; 6</h3>
-                                <p>abazzia 7% </p>
+                                <h3>Gambrinus Zwickel 50cl &emsp; 6</h3>
+                                <p>Bionda tedesca non filtrata 4,9%</p>
                             </li>
                             <li>
-                                <h3>Mukkeller PSE 50cl &emsp; 6</h3>
-                                <p>ale 5,6% </p>
+                                <h3>Mukkeller Nonnukka 50cl &emsp; 6</h3>
+                                <p>ale bionda 4,8%</p>
+                            </li>
+                            <li>
+                                <h3>Mukkeller Wanda 50cl &emsp; 6</h3>
+                                <p>ipa 6,9% </p>
                             </li>
                             <li>
                                 <h3>Mukkeller Marina 50cl &emsp; 6</h3>
                                 <p>american pale ale 6,4%</p>
                             </li>
-                            <li>
-                                <h3>Mukkeller Tulio 50cl &emsp; 6</h3>
-                                <p>rye IPA 6,5%</p>
-                            </li>
-                            <li>
-                                <h3>MC-77 Bow Tie 33cl &emsp; 6</h3>
-                                <p>IPA 6,3%</p>
-                            </li>
-                            <li>
-                                <h3>Hirsch Doppelbock 50cl &emsp; 6</h3>
-                                <p>rossa tedesca 7,2%</p>
-                            </li>
+
                             <li>
                                 <h3>Mariahilfer Schwarze 50cl &emsp; 6</h3>
                                 <p>nera tedesca 5,5% </p>
@@ -326,10 +323,10 @@
                                 <h3>Castelli Calix 33cl &emsp; 6</h3>
                                 <p>Stout 6,7%</p>
                             </li>
-                            <li>
+<!--                             <li>
                                 <h3>Gusswerk Zum Wohl 33cl &emsp; 6</h3>
                                 <p>tedesca senza glutine biologica 4,9%</p>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
