--- a/menu/index1.html
+++ b/menu/index1.html
@@ -496,7 +496,7 @@
                         </li>
                         <li>
                             <h3>Du Perou 10 anni &emsp; 8</h3>
-                            <p>Perù 45%. <br>Profumo di frutta fresca: albicocche, pesche e pere, seguito da legno, spezie e tabacco. Al palato  è fedele a ciò che il naso ha annunciato, ma in ordine inverso. Finale piacevole e delicato</p>
+                            <p>Perù 45%. <br>Profumo di frutta fresca: albicocche, pesche e pere, seguito da legno, spezie e tabacco. Al palato  è fedele a ciò che il naso ha annunciato</p>
                         </li>
                         <li>
                             <h3>Naga &emsp; 6</h3>
@@ -516,10 +516,6 @@
                         <li>
                             <h3>Teeling &emsp; 8</h3>
                             <p>Irlandese single malt 46%. <br>Note di vaniglia e spezie con dolci sentori di rum</p>
-                        </li>
-                        <li>
-                            <h3>Du Perou 10 anni &emsp; 8</h3>
-                            <p>Perù 45%. <br>Profumo di frutta fresca: albicocche, pesche e pere, seguito da legno, spezie e tabacco. Al palato  è fedele a ciò che il naso ha annunciato, ma in ordine inverso. Finale piacevole e delicato</p>
                         </li>
                         <li>
                             <h3>Big Peat &emsp; 8</h3>
