--- a/menu/index1.html
+++ b/menu/index1.html
@@ -244,27 +244,28 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Gambrinus Helles</h3>
-                            <p>keller non amara 4,9%</p>
+                            <p>Keller non amara 4,9%</p>
                         </li>
                         <li>
                             <h3>Castelli Italicum</h3>
-                            <p>bionda fruttata 5,0%</p>
+                            <p>Bionda fruttata 5,0%</p>
                         </li>
                         <li>
                             <h3>Gambrinus Weisse</h3>
-                            <p>weisse 5,2%</p>
-                        </li>
-                        <li>
-                            <h3>MC-77 Mahlzeit</h3>
-                            <p>Altbier rossa 5,5%</p>
+                            <p>Weisse 5,2%</p>
                         </li>
                         <li>
                             <h3>MC-77 Sofronia</h3>
                             <p>Blanche con ibisco 5%</p>
                         </li>
                         <li>
+                            <h3>MC-77 Mahlzeit</h3>
+                            <p>Altbier rossa 5,5%</p>
+                        </li>
+
+                        <li>
                             <h3>Castelli Palmares</h3>
-                            <p>rossa stile inglese 5,6%</p>
+                            <p>Rossa stile inglese 5,6%</p>
                         </li>
                          <li>
                             <h3>MC-77 Ape Regina</h3>
@@ -284,19 +285,19 @@
                         <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3">
                             <li>
                                 <h3>Gambrinus Pils 50cl &emsp; 6</h3>
-                                <p>bionda pils 4,9%</p>
+                                <p>Bionda pils 4,9%</p>
                             </li>
                             <li>
                                 <h3>Zotler 1447 Naturtrub 50cl &emsp; 6</h3>
-                                <p>marzen tedesca non filtrata 4,9%</p>
+                                <p>Marzen tedesca non filtrata 4,9%</p>
                             </li>
                             <li>
                                 <h3>Hirsch Hellerbock 50cl &emsp; 6</h3>
-                                <p>keller tedesca 6,5%</p>
+                                <p>Keller tedesca 6,5%</p>
                             </li>
                             <li>
                                 <h3>Zotler Weisse 50cl &emsp; 6</h3>
-                                <p>weisse 5,2% </p>
+                                <p>Weisse 5,2% </p>
                             </li>
                             <li>
                                 <h3>Gambrinus Zwickel 50cl &emsp; 6</h3>
@@ -304,20 +305,20 @@
                             </li>
                             <li>
                                 <h3>Mukkeller Nonnukka 50cl &emsp; 6</h3>
-                                <p>ale bionda 4,8%</p>
+                                <p>Ale bionda 4,8%</p>
                             </li>
                             <li>
                                 <h3>Mukkeller Wanda 50cl &emsp; 6</h3>
-                                <p>ipa 6,9% </p>
+                                <p>Ipa 6,9% </p>
                             </li>
                             <li>
                                 <h3>Mukkeller Marina 50cl &emsp; 6</h3>
-                                <p>american pale ale 6,4%</p>
+                                <p>American pale ale 6,4%</p>
                             </li>
 
                             <li>
                                 <h3>Mariahilfer Schwarze 50cl &emsp; 6</h3>
-                                <p>nera tedesca 5,5% </p>
+                                <p>Nera tedesca 5,5% </p>
                             </li>
                             <li>
                                 <h3>Castelli Calix 33cl &emsp; 6</h3>
@@ -341,11 +342,11 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Rosso Marche IGT &emsp;Quarto 2,5 / Litro 7,5</h3>
-                            <p>tavignano</p>
+                            <p>Cantina di Tavignano</p>
                         </li>
                         <li>
                             <h3>Verdicchio DOC &emsp; Quarto 2,5 / Litro 7,5</h3>
-                            <p>tavignano</p>
+                            <p>Cantina di Tavignano</p>
                         </li>
                     </ul>
                 </div>
@@ -356,27 +357,27 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Rosso Piceno DOC &emsp; 11,5 / 3</h3>
-                            <p>valmusone</p>
+                            <p>Cantina Valmusone</p>
                         </li>
                         <li>
                             <h3>Lacrima DOC &emsp; 12,5 / 3</h3>
-                            <p>valmusone</p>
+                            <p>Cantina Valmusone</p>
                         </li>
                         <li>
                             <h3>Libenter DOC &emsp; 19</h3>
-                            <p>tavignano</p>
+                            <p>Cantina di Tavignano</p>
                         </li>
                         <li>
                             <h3>Costa Verde DOC &emsp; 12,5 / 3</h3>
-                            <p>tavignano</p>
+                            <p>Cantina di Tavignano</p>
                         </li>
                         <li>
                             <h3>Rosato IGP &emsp; 15</h3>
-                            <p>tavignano</p>
+                            <p>Cantina di Tavignano</p>
                         </li>
                         <li>
                             <h3>Misco Superiore DOC &emsp; 18</h3>
-                            <p>tavignano</p>
+                            <p>Cantina di Tavignano</p>
                         </li>
                         <li>
                             <h3>Gewurztraminer DOC &emsp; 18 / 4</h3>
@@ -384,7 +385,7 @@
                         </li>
                         <li>
                             <h3>Prosecco Trèser DOCG &emsp; 15 / 3,5</h3>
-                            <p>cantina serre di pederiva</p>
+                            <p>Cantina Serre di Pederiva</p>
                         </li>
                         <li>
                             <h3>Trento DOCG &emsp; 25</h3>
@@ -399,7 +400,7 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Nero Visciola &emsp; 19 / 3,5</h3>
-                            <p>antinori</p>
+                            <p>Antinori</p>
                         </li>
                     </ul>
                 </div>
@@ -414,23 +415,23 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Acqua &emsp;  1 / 1,5</h3>
-                            <p>mezzo litro / litro</p>
+                            <p>Mezzo litro / Litro</p>
                         </li>
                         <li>
                             <h3>Coca Cola &emsp; 3 / 6</h3>
-                            <p>33cl / litro</p>
+                            <p>33cl / Litro</p>
                         </li>
                         <li>
                             <h3>Aranciata &emsp; 3</h3>
-                            <p>passarelli 27cl</p>
+                            <p>Passarelli 27cl</p>
                         </li>
                         <li>
                             <h3>Succo di Mela &emsp; 3</h3>
-                            <p>yoga biologico</p>
+                            <p>Yoga biologico</p>
                         </li>
                         <li>
                             <h3>Acqua Tonica &emsp; 3</h3>
-                            <p>j.gasco 20cl</p>
+                            <p>J.Gasco 20cl</p>
                         </li>
                     </ul>
                 </div>
@@ -441,11 +442,11 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Caffè &emsp; 1</h3>
-                            <p>espresso, deca</p>
+                            <p>Espresso, Deca</p>
                         </li>
                         <li>
                             <h3>Caffè &emsp; 1,5</h3>
-                            <p>corretto, orzo, macchiato</p>
+                            <p>Corretto, Orzo, Macchiato</p>
                         </li>
                         <li>
                             <h3>Cappuccino &emsp; 3</h3>
