--- a/menu/index1.html
+++ b/menu/index1.html
@@ -299,10 +299,10 @@
                                 <h3>Zotler Weisse 50cl &emsp; 6</h3>
                                 <p>Weisse 5,2% </p>
                             </li>
-                            <li>
+<!--                             <li>
                                 <h3>Gambrinus Zwickel 50cl &emsp; 6</h3>
                                 <p>Bionda tedesca non filtrata 4,9%</p>
-                            </li>
+                            </li> -->
                             <li>
                                 <h3>Mukkeller Nonnukka 50cl &emsp; 6</h3>
                                 <p>Ale bionda 4,8%</p>
@@ -415,7 +415,7 @@
                     <ul class="small-block-grid-1 medium-block-grid-2 large-block-grid-3 title-divider">
                         <li>
                             <h3>Acqua &emsp;  1 / 1,5</h3>
-                            <p>Mezzo litro / Litro</p>
+                            <p>Mezzo Litro / Litro</p>
                         </li>
                         <li>
                             <h3>Coca Cola &emsp; 3 / 6</h3>
